Closed Bug 359210 Opened 19 years ago Closed 19 years ago

Firefox goes CPU bound when loading the attached page

Categories

(Firefox :: Disability Access, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: wwalker, Assigned: aaronlev)

References

Details

(Keywords: access, hang)

Attachments

(3 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20061025 Minefield/3.0a1 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20061025 Minefield/3.0a1 When I load some pages in Firefox, it does thermonuclear and I'm afraid it's going to leave wads of hot melted plastic from laptop in my lap. The Oct-25 build doesn't exhibit this behavior, but more recent builds do. Reproducible: Always Steps to Reproduce: 1. Run the latest Firefox nightly. 2. Open the attached file. 3. Watch your machine slow to a grinding halt.
Doesn't sound accessibility-related. Shouldn't it be fired under a more general component?
I just did some more testing: if I disable accessibility support, the problem goes away. :-( So...this looks like it might be a problem specific to accessibility.
Assignee: nobody → aaronleventhal
Status: UNCONFIRMED → ASSIGNED
Blocks: newatk
Keywords: access, hang
Attached patch Fixes both testcases (obsolete) — Splinter Review
Attachment #244488 - Flags: review?(ginn.chen)
Comment on attachment 244488 [details] [diff] [review] Fixes both testcases We just need to stop walking the frames. It's causing too many issues, including bug 359204.
Attachment #244488 - Attachment is obsolete: true
Attachment #244488 - Flags: review?(ginn.chen)
Blocks: 359204
No longer blocks: 359204
Depends on: 359204
Attachment #245057 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: