Bug 359210 Firefox hangs when loading the attached page temporary fix by aaronleventhal r=ginn.chen